--- a/deployment.yml
+++ b/deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: flask-app-container
-        image: anshuman123abc/gitops-argocd
+        image: anshuman123abc/polling
         ports:
         - containerPort: 5000
